--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -28,7 +28,7 @@ jobs:
         id: update_changelog
         run: |
           CHANGELOG=$(git log -1 --pretty=%B | sed '1d;$d') >> $GITHUB_ENV
-          FORMATTED_VERSION="## <cy>$VERSION_INPUT</c>" ({{ github.event.head_commit.timestamp }})
+          FORMATTED_VERSION="## <cy>$VERSION_INPUT</c> ({{ github.event.head_commit.timestamp }})"
           echo -e "\n$FORMATTED_VERSION$CHANGELOG" > tmp.md
           cat ./changelog.md >> tmp.md
           mv tmp.md changelog.md
