--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Update changelog and bump version
         id: update_changelog
         run: |
-          RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | tr '\n' '\\n')
-          CHANGELOG=$(echo -e "$RAW_CHANGELOG" | sed '1d;2d')
+          RAW_CHANGELOG=$("echo "${{ github.event.head_commit.message }}"" | tr '\n' '\\n')
+          echo "$RAW_CHANGELOG"
+          CHANGELOG=$("echo -e "$RAW_CHANGELOG"" | sed '1d;2d')
           FORMATTED_DATE=$(date -d "${{ github.event.head_commit.timestamp }}" '+%Y-%m-%d') 
           FORMATTED_VERSION="## <cy>$VERSION_INPUT</c> ($FORMATTED_DATE)"
           echo -e "\n$FORMATTED_VERSION$CHANGELOG" > tmp.md
