--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -13,6 +13,15 @@ jobs:
     name: Modify mod files
     runs-on: ubuntu-latest
     steps:
+      - name: Initial Checks
+        run: |
+          echo "VERSION_INPUT=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
+          if [[ $VERSION_INPUT =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo Version $VERSION_INPUT is valid.
+          else
+            echo Version seems to be invalid. Goodbye!
+            exit 1
+          fi
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -20,7 +29,6 @@ jobs:
         id: get_version_input
         run: |
         
-          echo "VERSION_INPUT=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
           echo "value=$VERSION_INPUT" >> $GITHUB_OUTPUT
           echo version returned "$VERSION_INPUT".
           
