--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -25,7 +25,7 @@ jobs:
           if [[ $VERSION_INPUT =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo Version $VERSION_INPUT is valid.
           else
-            echo Version seems to be invalid. Goodbye!
+            echo Version $VERSION_INPUT doesn't seem to be invalid. Goodbye!
             exit 1
           fi
 
