--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -21,7 +21,7 @@ jobs:
         
       - name: Initial version check
         run: |
-          echo "VERSION_INPUT=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
+          echo "VERSION_INPUT=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
           if [[ $VERSION_INPUT =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Version $VERSION_INPUT is valid."
           else
