--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Prepare for release
         run: |
           VERSION_INPUT="$(echo "${{ github.event.head_commit.message }}" | sed -n '1p')"
-          RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed ':a;N;$!ba;s/\n/\\n/g')
+          RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed ':a;N;$!ba;s/\n/<br>/g')
           LATEST_CHANGELOG=$(echo -e "$RAW_CHANGELOG" | sed '1d;2d')
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           MOD_VER=$(echo "${{ github.event.head_commit.message }}" | sed -n '1p') >> $GITHUB_ENV
