--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -157,9 +157,14 @@ jobs:
           fi
       - name: Prepare for release
         run: |
-          VERSION_INPUT="$(echo "${{ github.event.head_commit.message }}" | sed -n '1p')"
           RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed ':a;N;$!ba;s/\n/<br>/g')
+          echo raw changelog:
+          echo $RAW_CHANGELOG
+          echo ----
           LATEST_CHANGELOG=$(echo "$RAW_CHANGELOG" | sed '1d;2d')
+          echo latest changelog:
+          echo $LATEST_CHANGELOG
+          echo ----
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           MOD_VER=$(echo "${{ github.event.head_commit.message }}" | sed -n '1p') >> $GITHUB_ENV
           echo publishing mod ver: ${MOD_VER}
