--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -157,11 +157,11 @@ jobs:
           fi
       - name: Prepare for release
         run: |
-          RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed ':a;N;$!ba;s/\n/<br>/g')
+          RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed '1d;2d')
           echo raw changelog:
           echo $RAW_CHANGELOG
           echo ----
-          LATEST_CHANGELOG=$(echo "$RAW_CHANGELOG" | sed '1d;2d')
+          LATEST_CHANGELOG=$(echo "$RAW_CHANGELOG" | sed ':a;N;$!ba;s/\n/<br>/g')
           echo latest changelog:
           echo $LATEST_CHANGELOG
           echo ----
