--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Secondary version check
         run: |
-          if "$(git tag | sed ':a;N;$!ba;s/\n/\\n/g')" | grep -q "$VERSION_INPUT"; then
+          if "echo $(git tag | sed ':a;N;$!ba;s/\n/\\n/g')" | grep -q "$VERSION_INPUT"; then
             echo "The version you're trying to release ($VERSION_INPUT) already have existed! Make sure you know what you're doing!"
             exit 1
           else
@@ -56,7 +56,7 @@ jobs:
           RAW_CHANGELOG=$(echo "${{ github.event.head_commit.message }}" | sed ':a;N;$!ba;s/\n/\\n/g')
           echo "$RAW_CHANGELOG"
           CHANGELOG=$(echo -e "$RAW_CHANGELOG" | sed '1d;2d')
-          if [ -z "$CHANGELOG}" ]; then
+          if [ -z "$CHANGELOG" ]; then
             echo "Changelog not provided. Skipping."
           else
             FORMATTED_DATE=$(date -d "${{ github.event.head_commit.timestamp }}" '+%Y-%m-%d') 
@@ -162,15 +162,22 @@ jobs:
           echo $RAW_CHANGELOG
           echo ----
           LATEST_CHANGELOG=$(echo "$RAW_CHANGELOG" | perl -pe 's/\n/<br>/g')
-          echo latest changelog:
-          echo $LATEST_CHANGELOG
-          echo ----
+          if -z ["$LATEST_CHANGELOG"]; then
+            echo Hmmm, apparently no changelog has been provided. Using an alternate body for that then!
+            BODY=$(echo "<strong>This is an automated release. For the full changelogs of current and past versions, please refer to the \`changelog.md\` file.</strong><br><br><em>No changelog provided.</em>)
+          else
+            echo latest changelog:
+            echo $LATEST_CHANGELOG
+            echo ----
+            BODY=$(echo "<strong>This is an automated release. For the full changelogs of current and past versions, please refer to the \`changelog.md\` file.</strong><h2>What's New:</h2>$LATEST_CHANGELOG" | sed ':a;N;$!ba;s/\n/<br>/g')
+          fi
+          
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           MOD_VER=$(echo "${{ github.event.head_commit.message }}" | sed -n '1p') >> $GITHUB_ENV
           echo publishing mod ver: ${MOD_VER}
           REPO=${{ github.repository }}
           RELEASE_NAME="Release ${MOD_VER}"
-          BODY=$(echo "<strong>This is an automated release. For the full changelogs of current and past versions, please refer to the \`changelog.md\` file.</strong><h2>What's New:</h2>$LATEST_CHANGELOG" | sed ':a;N;$!ba;s/\n/<br>/g')
+          
           uwu=$(echo "${BODY//[$'\t\r\n']}")
           echo Summary:
           echo - Mod version: $MOD_VER
