--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -130,6 +130,7 @@ jobs:
   build-ios:
     name: Build for iOS
     runs-on: macos-latest
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v4
