--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -152,7 +152,7 @@ jobs:
   package:
     name: Package and release mod
     runs-on: ubuntu-latest
-    needs: ['build']
+    needs: ['build-ios']
 
     steps:
       - uses: geode-sdk/build-geode-mod/combine@main
