--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Secondary version check
         run: |
+          # help needed fixing
           if "'echo $(git tag | sed ':a;N;$!ba;s/\n/\\n/g')'" | grep -q "$VERSION_INPUT"; then
             echo "The version you're trying to release ($VERSION_INPUT) already have existed! Make sure you know what you're doing!"
             exit 1
@@ -130,7 +131,7 @@ jobs:
   build-ios:
     name: Build for iOS
     runs-on: macos-latest
-    needs: build
+    needs: magic-touches
     steps:
       - name: Checkout
         uses: actions/checkout@v4
