--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -153,7 +153,7 @@ jobs:
   package:
     name: Package and release mod
     runs-on: ubuntu-latest
-    needs: ['build-ios']
+    needs: ['build-ios', 'build']
 
     steps:
       - uses: geode-catgirls/build-geode-mod/combine@main
