--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Secondary version check
         run: |
           # help needed fixing
-          if 'git tag | grep "$VERSION_INPUT"'; then
-            echo "The version you're trying to release ($VERSION_INPUT) already have existed! Make sure you know what you're doing!"
+          if git tag | grep -q "$VERSION_INPUT"; then
+            echo "The version you're trying to release ($VERSION_INPUT) already exists! Make sure you know what you're doing!"
             exit 1
           else
             echo "All good! :3"
